fix(mobile): style and touch fixes for gallery on mobile

--- a/src/components/scss/EcGallery.scss
+++ b/src/components/scss/EcGallery.scss
@@ -18,7 +18,7 @@
     padding: 0;
     display: inline-flex;
     top: 100%;
-    margin-top: -15px;
+    margin-top: -35px;
 
     @media (min-width: 992px) {
       position: static;
